fix: optimize toolbar layout on small screen (#41)

--- a/packages/secretnote/src/modules/metrics/index.less
+++ b/packages/secretnote/src/modules/metrics/index.less
@@ -6,7 +6,6 @@
   margin: 0;
 
   .chat-icon {
-    margin-top: 12px;
     color: #7b7b7b;
     fill: none !important;
   }
